fixed spacing

--- a/project code/public/css/style.css
+++ b/project code/public/css/style.css
@@ -88,7 +88,7 @@ body {
       /*float: left;*/
       justify-content: space-around;
       width: 100%;
-      height: 520px;
+      height: 620px;
       padding-left: 2%;
       padding-right: 2%;
   }
@@ -305,4 +305,8 @@ h2,p,form{
   
   .slider.round:before {
     border-radius: 50%;
+  }
+
+  #info{
+      width: 90%;
   }
